--- a/Pintrest-layout/style.css
+++ b/Pintrest-layout/style.css
@@ -35,8 +35,49 @@ aside i img {
 .aside1,.aside2 i {
     font-size: 25px;
 }
+section {
+    width: 100%;
+}
 main section nav {
     width: 100%;
-    height: 100px;
-    background-color: gray;
+    height: 80px;
+    /* background-color: gray; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1.5rem;
+}
+main section nav input {
+    width: 95%;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(228, 228, 228);
+}
+main section nav img {
+    width: 60px;
+}
+main section nav i {
+    font-size: 30px;
+    opacity: 0.5;
+}
+section .images {
+    width: 100%;
+    column-count: 5;
+    column-gap: 10px;
+    padding: 0 20px;
+}
+section .images img {
+    width: 100%;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+
+@media (max-width: 600px) {
+    aside {
+        width: 10vw;
+    }
+    section .images {
+        column-count: 2;
+    }
 }
