--- a/BentoGrid/style.css
+++ b/BentoGrid/style.css
@@ -105,6 +105,8 @@ section {
     padding: 10px;
 }
 #card2 {
+    width: 100%;
+    height: 90vh;
     background-color: #0C0021;
     grid-area: topright;
     overflow: hidden;
@@ -115,6 +117,8 @@ section {
     object-fit: cover;
 }
 #card3 {
+    width: 100%;
+    height: 50vh;
     background-color: goldenrod;
     grid-area: bottomleft1;
     overflow: hidden;
@@ -128,6 +132,7 @@ section {
     background-color: #ED3780;
     grid-area: bottomleft2;
     padding: 30px;
+    margin-bottom: 30px;
 }
 #card4 h1 {
     width: 80%;
@@ -142,5 +147,22 @@ section {
     font-family: three;
     color: #ffffff;
     opacity: .7;
+}
+
+@media (max-width: 600px) {
+    section {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto 1fr 1fr;
+        
+        grid-gap: 10px;
+        padding: 20px 30px;
+
+        grid-template-areas: 
+        "topleft"
+        "topright"
+        "bottomleft1"
+        "bottomleft2"
+        ;
+    }
 }
 
